Add autoconf and automake generation

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@ proto/
 protobuf/
 src/edu
 lib/`
+.deps/
+Makefile
+Makefile.in
+Makefile.old
+aclocal.m4
+autom4te.cache/
+config.h
+config.h.in
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+stamp-h1
+config.h*
