--- a/configure.ac
+++ b/configure.ac
@@ -10,38 +10,34 @@ AC_CONFIG_HEADERS([config.h])
 # Checks for programs.
 AC_PROG_CXX([clang++ g++ clang gcc])
 AC_PROG_CC([clang gcc])
+AC_LANG([C++])
 
-# Checks for libraries.
-AC_SEARCH_LIBS([curl_easy_setopt], [curl], [], [AC_MSG_FAILURE([libcurl not found!])])
-AC_SEARCH_LIBS([nettle_aes256], [nettle], [], [AC_MSG_FAILURE([libnettle not found!])])
-AC_SEARCH_LIBS([pthread_exit], [pthread], [], [AC_MSG_FAILURE([libpthread not found!])])
-AC_SEARCH_LIBS([gnutls_global_init], [gnutls], [], [AC_MSG_FAILURE([libgnutls not found!])])
-LIBS="$LIBS `pkg-config gnutls --cflags --libs`"
-
-# AC_SEARCH_LIBS_CXX(prologue, body, search-libs, [action-if-found], [action-if-not-found], [other-libs])
+# GTB_SEARCH_LIBS_CXX(prologue, body, search-libs, [action-if-found], [action-if-not-found], [other-libs])
 # -----------------------------------------------------------------------------------
-AC_DEFUN([AC_SEARCH_LIBS_CXX],
+AC_DEFUN([GTB_SEARCH_LIBS_CXX],
   [
     AC_MSG_CHECKING([for library containing [$3]])
     TMP="$LIBS"
     NEWLIB=`pkg-config --silence-errors --cflags --libs $3`
     if @<:@ "${NEWLIBS}" == "" @:>@
     then
-      LIBS="$LIBS -l$3"
-    else
-      LIBS="$LIBS $NEWLIBS"
+      NEWLIBS="-l$3"
     fi
+    LIBS="$LIBS $NEWLIBS"
     AC_LINK_IFELSE(
       [AC_LANG_PROGRAM(
         [
-          [$1]
+          $1
         ],
         [
-          [$2;]
+          $2
         ]
       )],
       [
-	AC_MSG_RESULT([yes])
+	AC_MSG_RESULT([$NEWLIBS])
+        AC_DEFINE_UNQUOTED(AS_TR_CPP([HAVE_$3]), [1], [Define if you have lib$3])
+	unset NEWLIBS
+	$4
       ],
       [
 	AC_MSG_RESULT([no])
@@ -50,12 +46,48 @@ AC_DEFUN([AC_SEARCH_LIBS_CXX],
       ]
     )
   ]
+) # GTB_SEARCH_LIBS_CXX
+
+# Checks for libraries.
+AC_LANG_PUSH([C])
+AC_SEARCH_LIBS([curl_easy_setopt], [curl], [], [AC_MSG_FAILURE([libcurl not found!])])
+AC_SEARCH_LIBS([nettle_aes256], [nettle], [], [AC_MSG_FAILURE([libnettle not found!])])
+AC_SEARCH_LIBS([pthread_exit], [pthread], [], [AC_MSG_FAILURE([libpthread not found!])])
+AC_SEARCH_LIBS([gnutls_global_init], [gnutls], [], [AC_MSG_FAILURE([libgnutls not found!])])
+LIBS="$LIBS `pkg-config gnutls --cflags --libs`"
+AC_LANG_POP([C])
+
+
+AC_ARG_WITH([gtest],
+  [AS_HELP_STRING([--with-gtest],
+    [compile unit tests with gtest @<:@default=no@:>@])],
+  [],
+  [with_gtest=no])
+
+AS_IF([test "x$with_gtest" != xno],
+  [GTB_SEARCH_LIBS_CXX(
+    [
+      @%:@include <gtest/gtest.h>
+    ],
+    [testing::TestResult dummy],
+    [gtest],
+    [
+      GTB_SEARCH_LIBS_CXX(
+        [
+          @%:@include <gmock/gmock.h>
+        ],
+        [testing::Cardinality dummy],
+        [gmock],
+        [AC_MSG_NOTICE([Tests for gmock and gtest passed, will compile unit tests.])],
+        [AC_MSG_FAILURE([libgtest not found! Compilation with gtest failed!])]
+      )
+    ],
+    [AC_MSG_FAILURE([libgtest not found! Compilation with gtest failed!])]
+  )]
 )
 
-AC_LANG_PUSH([C++])
-AC_SEARCH_LIBS_CXX([#include <cppconn/prepared_statement.h>], [sql::PreparedStatement *prepStmt], [mysqlcppconn], [], [AC_MSG_FAILURE([libmysqlcppcon not found!])])
-AC_SEARCH_LIBS_CXX([#include <google/protobuf/message.h>], [google::protobuf::Message *msg], [protobuf], [], [AC_MSG_FAILURE([libprotobuf not found!])])
-AC_LANG_POP([C++])
+GTB_SEARCH_LIBS_CXX([@%:@include <cppconn/prepared_statement.h>], [sql::PreparedStatement *prepStmt], [mysqlcppconn], [], [AC_MSG_FAILURE([libmysqlcppcon not found!])])
+GTB_SEARCH_LIBS_CXX([@%:@include <google/protobuf/message.h>], [google::protobuf::Message *msg], [protobuf], [], [AC_MSG_FAILURE([libprotobuf not found!])])
 
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h inttypes.h locale.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/param.h sys/socket.h unistd.h])
